Feature: Add Raspiaudio Muse Board
WIP Add Raspiaudio Muse board

--- a/components/custom_board/CMakeLists.txt
+++ b/components/custom_board/CMakeLists.txt
@@ -10,10 +10,23 @@ if(CONFIG_AUDIO_BOARD_CUSTOM)
 	./generic_board/board_pins_config.c
 	)
 
+
   if(CONFIG_DAC_PCM51XX)
 	message(STATUS "Selected DAC is " CONFIG_DAC_PCM15XX)
 	list(APPEND COMPONENT_ADD_INCLUDEDIRS ./pcm51xx/include)
 	list(APPEND COMPONENT_SRCS ./pcm51xx/pcm51xx.c)
+  endif()
+
+  if(CONFIG_DAC_RASPIAUDIO)
+	message(STATUS "Selected DAC is " CONFIG_DAC_RASPIAUDIO)
+	list(APPEND COMPONENT_ADD_INCLUDEDIRS ./raspiaudio/include)
+	list(APPEND COMPONENT_SRCS ./raspiaudio/raspiaudio.c)
+  endif()
+
+  if(CONFIG_DAC_RASPIAUDIO_MUSE_PROTO)
+	message(STATUS "Selected DAC is " CONFIG_DAC_RASPIAUDIO_MUSE_PROTO)
+	list(APPEND COMPONENT_ADD_INCLUDEDIRS ./raspiaudio_proto/include)
+	list(APPEND COMPONENT_SRCS ./raspiaudio_proto/raspiaudio.c)
   endif()
 
   if(CONFIG_DAC_MA120X0)
