--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "C_Cpp.dimInactiveRegions": false
+    "C_Cpp.dimInactiveRegions": false,
+    "idf.adapterTargetName": "esp32",
+    "files.associations": {
+        "wifi_interface.h": "c",
+        "board.h": "c",
+        "raspiaudio.h": "c",
+        "bit": "c",
+        "*.tcc": "c",
+        "complex": "c",
+        "numeric": "c",
+        "limits": "c",
+        "stdint.h": "c"
+    }
 }
